# Stock-Exchange

./: .gitignore  README.md  docker-compose.yml  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/command/: account.rs  mod.rs  stock.rs  utils.rs
src-tauri/src/db/: mod.rs
src-tauri/src/objects/: account.rs  exchange.rs  mod.rs  order.rs  response.rs  stock.rs
src-tauri/src/server/: mod.rs  neondb.rs  redis.rs  redis_order.rs
src/lib/components/: OrderConfirmDialog.svelte
src/lib/components/ui/: orderPopover.svelte
src/lib/types/: account.ts  order.ts  stock.ts
src/routes/: +page.svelte
src/routes/(auth)/account/[accountId]/: +page.svelte
src/routes/(auth)/dashboard/: +page.svelte  service.ts
