[package]
name = "stock-exchange"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = { version = "2.2.5", features = [] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
redis = { version = "0.29.0", features = ["tokio-comp"] }
tokio-postgres = { version ="0.7.13", features = ["with-uuid-1"] }
uuid = { version = "1.13.1", features = ["v4", "v7", "js",] }
chrono = { version = "0.4.39", features = ["serde"] }
getset = "0.1.4"
postgres-openssl = "0.5.1"
openssl = "0.10.71"
dotenv = "0.15.0"
